--- a/mediapp-backend/src/main/resources/application.properties
+++ b/mediapp-backend/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-
+## SE RECOMIENDA PARA TENER RENDIMIENTO DE CONEXIONES DE JPA
+#spring.jpa.open-in-view=false
+#
+## Configuracion de la conexion a PostgreSQL
+#spring.datasource.url=jdbc:postgresql://localhost:5432/mediappdb
+#spring.datasource.username=root
+#spring.datasource.password=Aiuda@3312
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+## Configuracion de JPA (Hibernate en este caso)
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#
+##para URL 404
+##spring.mvc.throw-exception-if-no-handler-found=true
+##spring.mvc.static-path-pattern=/static
